--- a/ContactTracing/ContactTracing.csproj
+++ b/ContactTracing/ContactTracing.csproj
@@ -7,7 +7,20 @@
   <ItemGroup>
     <None Remove="Models\" />
   </ItemGroup>
+
   <ItemGroup>
-    <Folder Include="Models\" />
+    <None Include="Views\Home\Index.cshtml" />
+    <None Include="Views\Home\Privacy.cshtml" />
+    <None Include="Views\Shared\Error.cshtml" />
+    <None Include="Views\Shared\_Layout.cshtml" />
+    <None Include="Views\Shared\_LoginPartial.cshtml" />
+    <None Include="Views\Shared\_ValidationScriptsPartial.cshtml" />
+    <None Include="Views\_ViewImports.cshtml" />
+    <None Include="Views\_ViewStart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.20.0" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.20.0" />
   </ItemGroup>
 </Project>
